syntax = "proto3";

package pricing.v1;

import "google/protobuf/timestamp.proto";
import "pricing/v1/error_reason.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/pricing/v1;v1";

service PricingService {
  rpc GetPrice(GetPriceRequest) returns (GetPriceResponse) {};
  rpc ListPrices(ListPricesRequest) returns (ListPricesResponse) {};
  rpc SubscribePrices(SubscribePricesRequest) returns (stream PriceUpdate) {};
  
  // Option Pricing
  rpc GetOptionPrice(GetOptionPriceRequest) returns (GetOptionPriceResponse) {};
  rpc GetGreeks(GetGreeksRequest) returns (GetGreeksResponse) {};
}

message GetPriceRequest {
  string symbol = 1;
}

message Price {
  string symbol = 1;
  double bid = 2;
  double ask = 3;
  double mid = 4;
  google.protobuf.Timestamp timestamp = 5;
  string source = 6;
}

message GetPriceResponse {
  Price price = 1;
}

message ListPricesRequest {
  repeated string symbols = 1;
}

message ListPricesResponse {
  repeated Price prices = 1;
}

message SubscribePricesRequest {
  repeated string symbols = 1;
}

message PriceUpdate {
  Price price = 1;
}

// Option Related Messages

message OptionContract {
    string symbol = 1;
    string type = 2; // CALL, PUT
    double strike_price = 3;
    google.protobuf.Timestamp expiry_date = 4;
}

message GetOptionPriceRequest {
    OptionContract contract = 1;
    double underlying_price = 2;
    double volatility = 3;
    double risk_free_rate = 4;
}

message GetOptionPriceResponse {
    double price = 1;
    google.protobuf.Timestamp calculation_time = 2;
}

message GetGreeksRequest {
    OptionContract contract = 1;
    double underlying_price = 2;
    double volatility = 3;
    double risk_free_rate = 4;
}

message Greeks {
    double delta = 1;
    double gamma = 2;
    double theta = 3;
    double vega = 4;
    double rho = 5;
}

message GetGreeksResponse {
    Greeks greeks = 1;
    google.protobuf.Timestamp calculation_time = 2;
}
